read write requests